<resources>
    <string name="app_name">Mis Lugares</string>
    <string name="hint_placename">Nombre</string>
    <string name="text_placename">Algo que identifique el lugar</string>
    <string name="text_dir">Dirección del lugar</string>
    <string name="hint_dir">Dirección</string>
    <string name="hint_phone">Teléfono</string>
    <string name="text_phone">Teléfono de contacto</string>
    <string name="hint_url">Página web</string>
    <string name="text_url">Página web</string>
    <string name="hint_coment">Comentario</string>
    <string name="text_coment">Introduce tus notas</string>
    <string name="text_type">Tipo:</string>
    <string name="item_menu_settings">Configuración</string>
    <string name="item_menu_about">Acerca de...</string>
    <string name="item_menu_search">Buscar</string>
    <string name="text_name_place">Qhapaq Ñan - Sección Rumichaca - Guapuscal Bajo</string>
    <string name="text_type_place">Historico</string>
    <string name="text_date_place">Mar 11, 2017</string>
    <string name="text_time_place">1:35:40 PM</string>
    <string name="text_dir_place">Rumichaca - Guapuscal Bajo</string>
    <string name="text_phone_place">962849300</string>
    <string name="text_page_place">www.qhapaqnan.co</string>
    <string name="text_coment_place">Uno de los mejores lugares para visitar en verano.</string>
    <string name="item_menu_share">Compartir</string>
    <string name="item_menu_arrive">Cómo llegar</string>
    <string name="item_menu_edit">Editar</string>
    <string name="item_menu_delete">Borrar</string>
    <string name="title_edit_place">Editar</string>
    <string name="item_menu_cancel">CANCELAR</string>
    <string name="item_menu_save">GUARDAR</string>
    <string name="place_list_activity_title">Lugares</string>
</resources>
