<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_share"
        android:icon="@drawable/ic_share"
        android:orderInCategory="10"
        android:title="@string/item_menu_share"
        android:iconTint="@android:color/white"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/item_arrive"
        android:icon="@drawable/ic_direction"
        android:orderInCategory="20"
        android:title="@string/item_menu_arrive"
        android:iconTint="@android:color/white"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/item_edit"
        android:icon="@drawable/ic_edit"
        android:orderInCategory="30"
        android:title="@string/item_menu_edit"
        android:iconTint="@android:color/white"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/item_delete"
        android:icon="@drawable/ic_delete"
        android:orderInCategory="40"
        android:title="@string/item_menu_delete"
        android:iconTint="@android:color/white"
        app:showAsAction="ifRoom" />
</menu>