<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="192dp"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true"
            app:layout_scrollInterpolator="@android:anim/decelerate_interpolator"
            app:toolbarId="@+id/toolbar">

            <ImageView
                android:id="@+id/imageViewPicturePlace"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/place"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                android:fitsSystemWindows="true"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".view.ViewPlaceActivity">

            <TextView
                android:id="@+id/textViewNamePlace"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/text_name_place"
                android:textAppearance="@style/TitleTextPlace"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

            <RatingBar
                android:id="@+id/ratingBarScorePlace"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:numStars="5"
                android:rating="3"
                android:stepSize="1"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/textViewNamePlace" />

            <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/colorDivider"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/textViewDatePlace" />

            <TextView
                android:id="@+id/textViewDatePlace"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_date"
                android:text="@string/text_date_place"
                android:textAppearance="@style/ItemTextPlace"
                app:layout_constraintEnd_toStartOf="@+id/textViewTimePlace"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/guideline3"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/ratingBarScorePlace"
                android:drawableLeft="@drawable/ic_date" />

            <TextView
                android:id="@+id/textViewTimePlace"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:drawableStart="@drawable/ic_time"
                android:text="@string/text_time_place"
                android:textAppearance="@style/ItemTextPlace"
                app:layout_constraintBottom_toBottomOf="@+id/textViewDatePlace"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textViewDatePlace"
                app:layout_constraintTop_toTopOf="@+id/textViewDatePlace"
                android:drawableLeft="@drawable/ic_time" />

            <TextView
                android:id="@+id/textViewAddressPlace"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableLeft="@drawable/ic_direction"
                android:drawableStart="@drawable/ic_direction"
                android:text="@string/text_dir_place"
                android:textAppearance="@style/ItemTextPlace"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

            <TextView
                android:id="@+id/textViewPhonePlace"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autoLink="phone"
                android:clickable="true"
                android:drawableLeft="@drawable/ic_phone"
                android:drawableStart="@drawable/ic_phone"
                android:focusable="true"
                android:linksClickable="true"
                android:onClick="dialPhoneNumer"
                android:text="@string/text_phone_place"
                android:textAppearance="@style/ItemTextPlace"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/textViewAddressPlace" />

            <TextView
                android:id="@+id/textViewUrlPlace"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autoLink="web"
                android:clickable="true"
                android:drawableLeft="@drawable/ic_page"
                android:drawableStart="@drawable/ic_page"
                android:focusable="true"
                android:linksClickable="true"
                android:onClick="openUrl"
                android:text="@string/text_page_place"
                android:textAppearance="@style/ItemTextPlace"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/textViewPhonePlace" />

            <View
                android:id="@+id/divider2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/colorDivider"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/textViewUrlPlace" />

            <TextView
                android:id="@+id/textViewComentPlace"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="16dp"
                android:drawableTop="@drawable/ic_coment"
                android:text="@string/text_coment_place"
                android:textAppearance="@style/ItemTextPlace"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/divider2" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        app:fab_addButtonColorNormal="@color/colorPrimary"
        app:fab_addButtonSize="normal"
        app:fab_labelsPosition="left">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="takePhoto"
            app:fab_colorNormal="@color/colorAccent"
            app:fab_icon="@drawable/ic_camera"
            app:fab_size="mini"
            app:fab_title="Camara" />


        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabGallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="openGallery"
            app:fab_colorNormal="@color/colorAccent"
            app:fab_icon="@drawable/ic_gallery"
            app:fab_size="mini"
            app:fab_title="Galeria" />


    </com.getbase.floatingactionbutton.FloatingActionsMenu>

</android.support.design.widget.CoordinatorLayout>